[tool.poetry]
name = "responsive-image-utilities"
version = "0.1.0"
description = ""
authors = ["C. Thomas Brittain <cthomasbrittain@hotmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
torchvision = "^0.19.1"
torch = "^2.4.0"
pytorch-lightning = "^2.4.0"
pandas = "^2.2.3"
pyarrow = "^17.0.0"
rich = "^13.8.1"
flet = "^0.27.6"
pytest = "^8.3.5"
pynput = "^1.8.1"
clip = "^0.2.0"
timm = "^1.0.15"
scikit-learn = "^1.6.1"
transformers = "^4.51.3"
poethepoet = "^0.34.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# https://docs.pytest.org/en/6.2.x/customize.html
# https://pytest-with-eric.com/configuration/pytest-config-file/#Using-pytest-ini
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests", "integration"]
